[gd_scene load_steps=3 format=3 uid="uid://cgjtym43ir1qc"]

[ext_resource type="Theme" uid="uid://ctr5hyax2hjen" path="res://godot-menus/menu_button_font.tres" id="1_4dnaw"]
[ext_resource type="Script" path="res://godot-menus/volume_slider.gd" id="1_80ohj"]

[node name="VolumeSlider" type="Panel"]
custom_minimum_size = Vector2(400, 50)
script = ExtResource("1_80ohj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_4dnaw")
theme_override_font_sizes/font_size = 20
text = " Volume"

[node name="HSlider" type="HSlider" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(390, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_focus_exited"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/HSlider" to="." method="_on_h_slider_value_changed"]
